Lade till repeaterlista för SM0

--- a/rhb.tex
+++ b/rhb.tex
@@ -373,6 +373,81 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
 \end{longtable}
 
+\section{Repeatrar, länkar och fyrar}
+
+Hemma
+
+\begin{landscape}
+\section{Repeatrar distrikt 0}
+\footnotesize
+\begin{longtable}{llllrrlcl}
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SMØWIU/R      & Botkyrka     &          434.8750 &          -2MHz & 77,0Hz         &       QRV       & JO89WF           \\
+	Repeater          & FM           & SAØAZT/R      & Brottby      &          434.8000 &          -2MHz & 1750/77 Hz$^1$  &       QRV       & JO99DA           \\
+	Repeater          & FM           & SMØRDZ        & Brottby      &          145.6500 &        -600kHz & 1750         &       QRV       & JO99DN           \\
+	Repeater          & DMR          & SKØRYG        & Färingsö     &          434.6625 &          -2MHz & DV Carrier      &      Plan       & JO89VI           \\
+	Repeater          & FM           & SKØVR/R       & Gustavsberg  &          434.9750 &          -2MHz & 1750            &       QRV       & JO99EH           \\
+	Link              & FM           & SKØMM         & Gustavsberg  &          434.2250 &                & 91,5Hz         &       QRV       & JO99EH           \\
+	Repeater          & D-Star       & SKØQO-B       & Haninge      &          434.5750 &          -2MHz & DV Carrier      &       QRV       & JO99CF           \\
+	Repeater          & FM           & SKØQO/R       & Haninge      &          145.6875 &        -600kHz & 77,0Hz         &       QRV       & JO99BE           \\
+	Repeater          & FM           & SKØQO/R       & Haninge      &          434.7500 &          -2MHz & 77,0Hz         &       QRV       & JO99BE           \\
+	Repeater          & FM           & SKØNN/R       & Haninge      &          434.7750 &          -2MHz & Carrier         &       QRV       & JO99BE           \\
+	Hotspot           & D-Star       & SGØBON        & Haninge      &          433.4500 &                & DV Carrier      &       QRV       & JO99CE           \\
+	Repeater          & DMR          & SGØSZK        & Hemmesta     &          434.5875 &          -2MHz & DMR 240002      &       QRV       & JO99FH           \\
+	Repeater          & FM           & SMØWAJ/R      & Johanneshov  &          434.6500 &          -2MHz & Carrier         &       QRV       & JO99AH           \\
+	Link              & FM           & SMØUAO        & Kopparmora   &          434.4875 &                & 91,5 Hz         &       QRV       & JO99HI           \\
+	Hotspot           & D-Star       & SGØYOS-C      & L. Essingen  &          145.2375 &                & DV Carrier      &       QRV       & JO99AH           \\
+	Hotspot           & D-Star       & SEØYOS-C      & M/Y Erika    &          434.4500 &                & DV Carrier      &       QRV       & JO99AH           \\
+	Repeater          & FM           & SKØMK/R       & Mariefred    &          145.7000 &        -600kHz & 1750           &       QRV       & JO89OG           \\
+	Repeater          & FM           & SLØDZ/R       & Muskö        &           51.9500 &        -600kHz & 77,0 Hz          &       QRV       & JO98BX           \\
+	Repeater          & FM           & SMØGJK/R      & Norrtälje    &          145.6875 &        -600kHz & 1750         &       QRV       & JO99IS           \\
+	Repeater          & FM           & SMØGJK/R      & Norrtälje    &          434.9000 &          -2MHz & 1750         &       QRV       & JO99IS           \\
+	Repeater          & FM           & SKØBJ/R       & Nynäshamn    &          145.7125 &        -600kHz & 77,0 Hz         &       QRV       & JO88XV           \\
+	Repeater          & FM           & SEØE/R        & Saltsjöbo    &           51.8100 &        -600kHz & 1750         &       QRV       & JO99CG           \\
+	Link              & FM           & SKØMM         & Sandhamn     &          434.3750 &                & 91,5 Hz         &       QRV       & JO99KG           \\
+	Hotspot           & D-Star       & SKØAI-B       & Segeltorp    &          433.4625 &                & DV Carrier      &       QRV       & JO89XG           \\
+	Repeater          & DMR/FM       & SKØRPF        & Sigtuna      &          434.8875 &          -2MHz & DMR/123,0Hz    &       QRV       & JO89VP           \\
+	Repeater          & FM           & SMØWAJ/R      & Skärholmen   &          434.9250 &        +1,6MHz & Carrier         &       QRV       & JO89WG           \\
+	Repeater          & FM           & SMØHGS/R      & Skärholmen   &          145.7250 &        -600kHz & 77,0 Hz         &       QRV       & JO89WG           \\
+	Repeater          & FM           & SMØWHP        & Sollentuna   &          434.6000 &          -2MHz & 1750 Hz         &       QRV       & JO89XL           \\
+	Repeater          & FM           & SKØCT/R       & Solna        &          434.9500 &          -2MHz & 77,0 Hz         &       QRV       & JO89XJ           \\
+	Repeater          & FM           & SKØZA/R       & Solna        &          434.8500 &          -2MHz & 123,0 Hz        &       QRV       & JO89XI           \\
+	Repeater          & FM           & SMØOFV/R      & Solna        &          145.7625 &        -600kHz & 123,0 Hz        &       QRV       & JO99AI           \\
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SKØCT/R       & Solna        &           29.6200 &        -100kHz & 77,0 Hz         &        ?        & JO89XJ           \\
+	Repeater          & FM           & SMØKOT        & Stockholm    &          434.8250 &          -2MHz & 1750 Hz         &       QRT       &  \\
+	Repeater          & DMR          & SMØRMQ        & Stockholm    &          434.5125 &          -2MHz & DMR 240010      &       QRV       & JO99CH           \\
+	Repeater          & FM           & SMØWAJ/R      & Stockholm    &          434.8375 &          -2MHz &                 &      Plan       & JO99AH           \\
+	Hotspot           & D-Star       & SKØVF-C       & Bandhagen    &          145.3625 &                & DV Carrier      &       QRV       & JO99AG           \\
+	Hotspot           & D-Star       & SKØVF-B       & Bandhagen    &         1296.7000 &                & DV Carrier      &       QRV       & JO99AG           \\
+	Repeater          & FM           & SKØCT/R       & Kista        &         1297.0250 &          -6MHz & Carrier         &       QRV       & JO89XJ           \\
+	Repeater          & FM           & SKØCT/R       & Kista        &          434.6250 &          -2MHz & 77,0 Hz         &       QRV       & JO89XJ           \\
+	Repeater          & FM           & SKØPQ/R       & Kista        &          145.6750 &        -600kHz & 123,0 Hz        &       QRV       & JO86XV           \\
+	Repeater          & DMR          & SAØAZT/R      & Kista        &          434.9875 &          -2MHz & DMR             &       QRV       & JO89XJ           \\
+	Repeater          & D-Star       & SKØPT         & Kungsängen   &          434.5500 &          -2MHz & DV Carrier      &      Plan       & JO89UL           \\
+	Repeater          & FM           & SMØYIX/R      & Söder        &          434.7250 &          -2MHz & 77,0 Hz         &       QRV       & JO99BH           \\
+	Repeater          & DMR          & SKØNN         & Södertörn    &          434.5375 &          -2MHz & DMR             &       QRV       & JO99CF           \\
+	Hotspot           & D-Star       & SBØX-B        & Uppl. Väsby  &          433.5750 &                & DV Carrier      &       QRV       & JO89XM           \\
+	Repeater          & DMR          & SKØRYG        & Uppl. Väsby  &          434.7625 &          -2MHz & DMR/123,0Hz    &       QR        & JO89XM           \\
+	Hotspot           & D-Star       & SGØAMO        & Åkersberga   &          145.3625 &                & DV Carrier      &       QRV       & JO99DL           \\
+	Repeater          & FM           & SKØRIX        & Sthlm city   &          145.6250 &        -600kHz & Carrier         &       QRV       & JO99AH           \\
+	Repeater          & DMR          & SKØMG         & Sthlm city   &          434.6875 &          -2MHz & DMR 240099      &       QRV       & JO99AI           \\
+	Repeater          & FM           & SM5DWC/R      & Södertälje   &          434.8250 &          -2MHz & 1750/77,0Hz    &       QRV       & JO89TE           \\
+	Repeater          & FM           & SMØMMO/R      & Tullinge     &          145.6625 &        -600kHz & 77,0 Hz         &       QRV       & JO89XF           \\
+	Repeater          & FM           & SKØMT/R       & Täby         &          434.7000 &        +1,6MHz & Carrier         &       QRV       & JO99AK           \\
+	Repeater          & FM           & SKØMT/R       & Täby         &          434.7375 &          -2MHz & 77,0 Hz         &      Plan       & JO99AK           \\
+	Repeater          & DMR          & SKØMQ         & Täby         &          434.5625 &          -2MHz & DMR             &       QRV       & JO99AK           \\
+	Repeater          & FM           & SKØRYG        & Uppl. Väsby  &          434.6750 &          -2MHz & 1750/77,0Hz    &       QRV       & JO89XM           \\
+	Repeater          & FM           & SKØRYG        & Uppl. Väsby  &           51.9700 &        -600kHz & 1750/77,0Hz    &       QRV       & JO89WM
+\end{longtable}
+\begin{itemize}
+	\item[$^1$] Öppnas även med DTMF *
+\end{itemize}
+\normalsize
+\end{landscape}
+
+
+
 
 
 
