Lade till repeatrar SM4 och SM5

--- a/rhb.tex
+++ b/rhb.tex
@@ -499,8 +499,6 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	\item[$^1$] Öppnas även med DTMF 3
 \end{itemize}
 \normalsize
-
-
 \subsection{Repeatrar distrikt 3}
 \footnotesize
 \begin{longtable}{llllrrlcl}
@@ -573,20 +571,120 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & D-Star       & SK3JR         & Östersund        &          434.5625 &          -2MHz & DV Carrier      &       QRV       & JP73HC           \\
 	Repeater          & FM           & SK3JR/R2      & Ö-sund/Brattås.  &          145.7875 &        -600KHz & 127,3Hz         &       QRV       & JP73HC
 \end{longtable}
-%\begin{itemize}
-%	\item[$^1$] Öppnas även med DTMF 3
-%\end{itemize}
 \normalsize
-
-\end{landscape}
-
-
-
+\subsection{Repeatrar distrikt 4}
+\footnotesize
+\begin{longtable}{llllrrlcl}
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SK4RWQ        & Arvika/Valfj.       &          434.7750 &          -2MHz & 1750            &       QRV       & JO69ES           \\
+	Repeater          & FM           & SK4UH/R       & Avesta              &          434.8500 &          -2MHz & 1750            &       QRV       & JP80CD           \\
+	Repeater          & FM           & SK4RVN        & Borlänge            &          434.8000 &          -2MHz & 74,4Hz          &       QRV       & JP70RL           \\
+	Hotspot           & D-Star       & SG4UZM-B      & Borlänge            &          434.5500 &     DV Carrier &                 &       QRV       & JP70RM           \\
+	Hotspot           & D-Star       & SG4YPG-B      & Borlänge            &          433.6000 &     DV Carrier &                 &       QRV       & JP70RM           \\
+	Repeater          & D-Star       & SK4BW-B       & Borlänge            &          434.9000 &          -2MHz & DV Carrier      &       QRV       & JP70RJ           \\
+	Hotspot           & D-Star       & SG4AXV-C      & Ekshärad            &          145.4250 &     DV Carrier &                 &       QRV       & JP60RE           \\
+	Repeater          & FM           & SK4AO/R       & Falun               &          145.6250 &        -600kHz & 1750            &       QRV       &  \\
+	Repeater          & FM           & SK4AO/R       & Falun               &          434.6250 &          -2MHz & 1750            &       QRV       & JP70TO           \\
+	Link              & FM           & SK4AV/R       & Filipstad/Klockarh. &          145.2000 &                & Carrier         &       QRV       & JO79CR           \\
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SM4EFQ        & Filipstad/Storh.    &          145.7000 &        -600kHz & 1750            &       QRV       & JO79CR           \\
+	Hotspot           & D-Star       & SG4UOF-C      & Glanshammar         &          145.3375 &                & DV Carrier      &       QRV       & JO79RI           \\
+	Repeater          & FM           & SK4IL/R       & Grums               &          434.7250 &          -2MHz & 74,4Hz          &       QRV       & JO69NI           \\
+	Link              & FM           &               & Grängesberg         &          145.4500 &                &                 &       QRV       & JP70LG           \\
+	Repeater          & FM           & SK4HV/R       & Hagfors/Värmullsås. &          145.6750 &        -600kHz & 1750/114,8Hz    &       QRV       & JP60VA           \\
+	Link              & FM           & SK4RJJ        & Hagfors/Värmullsås. &          145.2250 &                & 74,4 Hz         &       QRV       & JP60UA           \\
+	Repeater          & FM           & SK4RKD        & Karlskoga           &          145.7500 &        -600kHz & Carrier         &       QRV       & JO79FJ           \\
+	Hotspot           & D-Star       & SG4BYH        & Karlstad            &          145.3875 &                & DV Carrier      &       QRV       & JO69RK           \\
+	Repeater          & FM           & SK4KS         & K-stad/Kronop.      &          434.8500 &          -2MHz & 1750            &       QRV       & JO69TJ           \\
+	Repeater          & FM           & SK4KIL        & Kil                 &          145.6250 &        -600kHz &                 &       QRV       & JO69QM           \\
+	Repeater          & D-Star       & SG4JPK        & Kil                 &          145.5750 &        -600kHz & DV Carrier      &       QRV       & JO69PM           \\
+	Repeater          & FM           & SK4KIL        & Kil                 &          434.9250 &          -2MHz & 74,4 Hz         &      Plan       & JO69NO           \\
+	Repeater          & FM           & SK4EA/R       & Kopparberg          &          145.6000 &        -600kHz & 1750            &       QRV       & JP79MW           \\
+	Repeater          & FM           & SK4RWP        & Kristinehamn        &          434.7000 &          -2MHz & 1750            &       QRV       & JO79AH           \\
+	Repeater          & FM           & SK4RUV        & Leksand             &          145.7750 &        -600kHz & 1750/85,4Hz     &       QRV       & JP70KQ           \\
+	Repeater          & FM           & SK4EA/R       & Lindesberg          &          145.6875 &        -600kHz & 1750/74,4Hz     &       QRV       & JO79NP           \\
+	Repeater          & FM           & SK4DM/R       & Ludvika             &          145.7250 &        -600kHz & 1750            &       QRV       & JP70NC           \\
+	Repeater          & FM           & SK4DM/R       & Ludvika             &          434.7250 &        -1,6MHz & 1750/DTMF1      &       QRV       & JP70NC           \\
+	Repeater          & FM           & SM4JDP/R      & Mora                &          145.7000 &        -600kHz & 1750/118,8Hz    &       QRV       & JP71DA           \\
+	Repeater          & FM           & SM4JDP        & Mora                &          434.6750 &          -2MHz & 71,9Hz          &       QRV       & JP71GA           \\
+	Repeater          & FM           & SM4JDP        & Mora                &          434.8500 &          -2MHz & Carrier         &       QRV       & JP71GA           \\
+	Repeater          & D-Star       & SG4TYA        & Mora                &          145.5750 &        -600kHz & DV Carrier      &       QRV       & JP71GE           \\
+	Link              & FM           &               & Nyhammar            &          145.4250 &                &                 &       QRV       & JP70LG           \\
+	Repeater          & FM           & SK4KO/R       & Orsa/Grönk.         &          145.7500 &        -600kHz & 1750            &       QRV       & JP71GF           \\
+	Repeater          & FM           & SK4KO/R       & Orsa/Grönk.         &          434.7500 &        -1,6MHz & 1750            &       QRV       & JP71GF           \\
+	Hotspot           & D-Star       & SG4AXQ        & Sunne               &          433.2000 &                & DV Carrier      &       QRV       & JO69NU           \\
+	Repeater          & FM           & SK4RJJ        & Sunne/Blåbärsk.     &          145.7750 &        -600kHz & 1750/74,4Hz$^1$ &       QRV       & JO69KU           \\
+	Repeater          & FM           & SK4ROI        & Särna               &          145.6750 &        -600kHz & 1750            &       QRV       & JP61NQ           \\
+	Link              & FM           & SK4RJJ        & Torsby/Hovfj.       &          145.2875 &                & 74,4Hz          &       QRV       & JO69LH           \\
+	Repeater          & FM           & SK4RPK        & Torsby/Valb.        &          434.6250 &          -2MHz & 1750Hz          &       QRV       & JP60LC           \\
+	Repeater          & D-Star       & SK4NI-C       & Tossebergsklätten   &          145.7625 &        -600kHz & DV Carrier      &       QRV       & JO69MX           \\
+	Repeater          & FM           & SK4WV/R       & Vansbro             &          145.6500 &        -600kHz & 1750 Hz         &       QRV       & JP70AM           \\
+	Repeater          & FM           & SK4WV/R       & Vansbro             &          434.6500 &        -1,6MHz & 1750            &       QRT       & JP70AM           \\
+	Repeater          & FM           & SK4RQF        & Årjäng              &          145.7250 &        -600kHz & 1750            &       QRV       & JO69BJ           \\
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SK4BX/R       & Örebro              &          145.6500 &        -600kHz & 1750            &       QRV       & JO79OG
+\end{longtable}
+\begin{itemize}
+\item[$^1$] Kan även öppnas med DTMF 1
+\end{itemize}
+\subsection{Repeatrar distrikt 5}
+\begin{longtable}{llllrrlcl}
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}      & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SK5RTG        & Arboga/Kolsva     &          145.7375 &        -600KHz & Carrier         &       QRV       & JP79WO           \\
+	Repeater          & FM           & SK5RTG        & Arboga/Kolsva     &          434.9000 &          -2MHz & Carrier         &       QRV       & JP79WO           \\
+	Repeater          & FM           & SK5WB/R       & Enköping          &          434.9500 &          -2MHz & 156,7Hz         &       QRV       & JO89NP           \\
+	Repeater          & FM           & SK5VM/R       & Eskilstuna        &          434.9750 &          -2MHz & 82,5Hz          &       QRV       & JO89GI           \\
+	Repeater          & FM           & SK5LW/R       & E-tuna/Torshälla  &          145.6125 &        -600KHz & 82,5Hz/DTMF 0   &       QRV       & JO89FJ           \\
+	Repeater          & D-Star       & SK5LW/R       & E-tuna/Torshälla  &          434.8500 &          -2MHz & DV Carrier      &       QRV       & JO89FJ           \\
+	Repeater          & FM           & SK5LW/R       & E-tuna/Ärla       &           51.8500 &        -600KHz & 82,5Hz          &       QRT       & JO89FJ           \\
+	Repeater          & FM           & SK5LW/R       & E-tuna/Ärla       &          145.5750 &        -600KHz & 82,5Hz          &       QRT       & JO89IG           \\
+	Repeater          & FM           & SK5LW/R       & E-tuna/Ärla       &           29.6400 &        -100KHz & 82,5Hz          &       QRV       & JO89IG           \\
+	Repeater          & FM           & SK5BN/R       & Finspång          &          434.9250 &          -2MHz & 107,2Hz         &       QRV       & JO78VR           \\
+	Hotspot           & D-Star       & SG5TAH-C      & Flen/Orrhammar    &          145.3375 &                & DV Carrier      &       QRV       & JO89GB           \\
+	Repeater          & D-Star       & SK5UM-B       & Flen/Vattent.     &          434.5500 &          -2MHz & DV Carrier      &       QRV       & JO89HB           \\
+	Repeater          & FM           & SK5UM/R       & Flen/Vattent.     &          145.7500 &        -600KHz & 91,5Hz          &       QRV       & JO89GB           \\
+	Repeater          & FM           & SK5UM/R       & Flen/Öja          &          434.7500 &          -2MHz & 1750/91,5Hz     &       QRV       & JO89HB           \\
+	Hotspot           & D-Star       & SG5UM         & Flen/Öja          &          145.2375 &                & DV Carrier      &       QRV       & JO89HB           \\
+	Repeater          & FM           & SK5RLZ        & Katrineholm       &          145.7875 &        -600KHz & 1750/DTMF 5     &       QRV       & JO88CX           \\
+	Hotspot           & D-Star       & SA5RG         & Katrineholm       &          434.4125 &                & DV Carrier      &       QRV       & JO88CX           \\
+	Repeater          & D-Star       & SA5RG         & Katrineholm       &          434.5250 &          -2MHz & DV Carrier      &       QRV       & JO88CX           \\
+	Repeater          & FM           & SK5RCQ        & Kisa              &          145.7000 &        -600KHz & 1750Hz          &       QRV       & JO77TX           \\
+	Repeater          & D-Star       & SA5BCG/R      & Knivsta           &          434.5250 &          -2MHz & 82,5Hz          &       QRV       & JO89VR           \\
+	Repeater          & FM           & SK5BB/R       & Köping            &          145.6375 &        -600KHz & 1750/82,5Hz     &       QRT       & JO79XM           \\
+	Repeater          & FM           & SK5BB/R       & Köping            &          434.8750 &          -2MHz & Carrier         &       QRT       & JO89AM           \\
+	Repeater          & FM           & SK5AS/R       & Linköping         &          145.7250 &        -600KHz & 1750            &       QRV       & JO78TJ           \\
+	Repeater          & FM           & SM5YMS/R      & Linköping         &          434.8000 &          -2MHz & 1750            &       QRV       & JO78SM           \\
+	Repeater          & FM           & SM5YMS/R      & Linköping         &           51.8300 &        -600KHz & 1750            &       QRV       & JO78SM           \\
+		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SM5DWC/R      & Linköping         &          434.8750 &          -2MHz & 82,5Hz          &       QRV       & JO78SM           \\
+	Repeater          & FM           & SM5DWC/R      & Linköping         &           51.8900 &        -600KHz & 82,5Hz          &       QRT       & JO78SM           \\
+	Repeater          & FM           & SK5LF/R       & L-köping/Majelden &          434.7250 &          -2MHz & 82,5Hz          &       QRV       & JO78TJ           \\
+	Repeater          & FM           & SM5YMT/R      & Ljungsbro         &          145.6625 &        -600KHz & 1750Hz          &       QRV       & JO78SM           \\
+	Repeater          & FM           & SK5AS/R       & Ljungsbro         &          145.7375 &        -600KHz & 1750/82,5       &       QRV       & JO78SN           \\
+	Repeater          & FM           & SK5AS/R       & Ljungsbro         &          434.9000 &          -2MHz & 1750/82,5       &       QRV       & JO78SN           \\
+	Repeater          & FM           & SL5ZAM/R      & Motala            &          145.7625 &        -600KHz & 1750/DTMF 5     &       QRT       & JO78MN           \\
+	Repeater          & D-Star       & SL5ZYT-C      & Norrköping        &          145.5750 &        -600KHz & DV Carrier      &       QRV       & JO88BO           \\
+	Repeater          & FM           & SL5ZYT/R      & Norrköping        &          434.9500 &          -2MHz & 82,5Hz          &       QRV       & JO88DQ           \\
+	Repeater          & FM           & SK5BN/R       & Norrk./Kolmården  &          145.6000 &        -600KHz & 1750/DTMF 5     &       QRV       & JO88FQ           \\
+	Repeater          & FM           & SK5BN/R       & Norrk./Ö. Eneby   &          434.6000 &          -2MHz & 1750Hz          &       QRV       & JO88BO           \\
+	Repeater          & FM           & SK5BE/R       & Nyköping          &          145.6375 &        -600KHz & 82,5Hz          &       QRV       & JO88LS           \\
+	Link              & FM           & SM5RVH/L      & Nyköping          &          145.4500 &                & 103,5Hz         &       QRV       & JO88LQ           \\
+	Hotspot           & D-Star       & SG5RVH-B      & Nyköping          &          434.4875 &                & DV Carrier      &       QRV       & JO88LQ           \\
+	Repeater          & FM           & SK5RO/R       & Tierp             &          145.6000 &        -600KHz & 1750            &       QRT       & JP80SJ           \\
+	Repeater          & FM           & SK5RO/R       & Tierp             &          434.6000 &        -1,6MHz & 1750            &       QRT       & JP80SJ           \\
+	Repeater          & FM           & SK5DB/R       & Uppsala           &          145.7500 &        -600KHz & 1750/82,5Hz     &       QRV       & JO89VU           \\
+	Repeater          & FM           & SK5DB/R       & Uppsala           &          434.7500 &          -2MHz & 1750/82,5Hz     &       QRV       & JO89VU           \\
+	Hotspot           & D-Star       & SC5SLU-C      & Uppsala           &          145.3250 &        Simplex & DV Carrier      &       QRV       & JO89QW           \\
+	Hotspot           & D-Star       & SM5EZN-B      & Uppsala           &          433.4875 &        Simplex & DV Carrier      &       QRV       & JO89QW           \\
+	Hotspot           & D-Star       & SG5BJY        & Uppsala           &          145.2875 &                & DV Carrier      &       QRV       & JO89TT           \\
+	Repeater          & D-Star       & SG5DV         & Uppsala           &          145.5875 &        -600KHz & DV Carrier      &      Plan       & JO89TT           \\
+	Repeater          & FM           & SM5USM/R      & Vingåker          &          434.6750 &          -2MHz & Carrier         &       QRV       & JO79XB           \\
+	Repeater          & FM           & SK5RHQ        & Västerås          &          145.7750 &        -600KHz & 1750/82,5Hz     &       QRV       & JO89GO
+\end{longtable}
+\normalsize
 
 
 %%%%%%%%%% Bandplaner här roterade 90 för enklast läsning %%%%%%%%%%
-
-\begin{landscape}
 	\section{Bandplan 6m 50--52 MHz}
 	\begin{tabular}{rrrll}
 		\textbf{Frekvens} &        & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                                  \\ \hline
@@ -602,13 +700,8 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 		           50.500 & 52.000 &      12 kHz & Alla moder      & SSTV 50.510, RTTY 50.600, FM 51.510                  \\ \hline
 		           51.810 & 51.990 &      12 kHz & FM Repeater     & Repeater ut, 20/10 kHz kanalavstånd                  \\
 		                  &        &             &                 & RF81 – RF99                                          \\ \hline
-	\end{tabular}
-\end{landscape}
-
-
-
-
-\begin{landscape}
+\end{tabular}
+\clearpage
 \section{Bandplan 2m 144--146 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens} &           & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                     \\ \hline
@@ -637,9 +730,7 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	          145.794 &   145.806 &      12 kHz & FM Rymd         & 145.800, 145.200 dplx m. bem. rymdfark. \\ \hline
 	          145.806 &   146.000 &      12 kHz & All mode        & Exklusivt satellit                      \\ \hline
 \end{tabular}
-\end{landscape}
-
-\begin{landscape}
+\clearpage
 \section{Bandplan 70cm 432--438 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens} &               & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                               \\ \hline
@@ -664,44 +755,36 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	                  &               &             &                 & 12,5 kHz med 2 MHz skift                          \\ \hline
 	          435.000 &       438.000 &      20 kHz & All mode        & Exklusivt satellit
 \end{tabular}
-%\small
-%	\begin{itemize}
-%		\item[$^1$] SSA har ett fel i sin bandplan här där det står 433.500--433.5940 i stället.
-%	\end{itemize}
-%\normalsize
-\end{landscape}
-
-
-\begin{landscape}
-	\section{Bandplan 23cm 1240--1300 MHz}
-	\begin{tabular}{rrrll}
-		\textbf{Frekvens} &          & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                           \\ \hline
-		         1240.000 & 1243.250 &      20 kHz & Alla moder      & 1240.000 - 1241.000 Digital kommunikation     \\ \hline
-		         1243.250 & 1260.000 &      20 kHz & ATV och Data    & Repeater ut 1258.150-1259.350, R20--68        \\ \hline
-		         1260.000 & 1270.000 &      12 kHz & Satellit        & Endast för satelliter alla moder              \\ \hline
-		         1270.000 & 1272.000 &      20 kHz & Alla moder      & Repeater in, 1270.025-1270.700, RS1--28       \\
-		                  &          &             &                 & Packet RS29--50                               \\ \hline
-		         1272.000 & 1290.994 &      20 kHz & ATV och Data    & Amatörtelevision ATV                          \\ \hline
-		         1290.994 & 1291.481 &      20 kHz & FM och DV       & Repeater in Repeat. in 1291.000--1291.475     \\
-		                  &          &             &                 & RM0 – RM19, 25 kHz, 6 MHz skift               \\ \hline
-		         1291.494 & 1296.000 &      12 kHz & Alla moder      &  \\ \hline
-		         1296.000 & 1296.150 &      500 Hz & CW,  MGM        & EME 1296.000--025, \textbf{CW anrop 1296.050} \\
-		                  &          &             &                 & PSK31 1296.138 MHz                            \\ \hline
-		         1296.150 & 1296.400 &     2.7 kHz & CW, SSB, MGM    & \textbf{SSB anrop 1296.200}                   \\
-		                  &          &             &                 & \textbf{FSK441 MS anrop 1296.370}             \\ \hline
-		         1296.400 & 1296.600 &     2.7 kHz & CW, SSB, MGM    & Linjära transpondrar infrekvens               \\ \hline
-		         1296.600 & 1296.800 &     2.7 kHz & CW, SSB, MGM    & SSTV/FAX 1296.500, MGM/RTTY 1296.600          \\ \hline
-		         1296.600 & 1296.800 &     2.7 kHz & CW, SSB, MGM    & Linjära transpondrar utfrekvens               \\
-		                  &          &             &                 & 1296.750-.800 lokala fyrar max 10 W           \\ \hline
-		         1296.800 & 1296.994 &      500 Hz & Fyrar           & Exklusivt segment för fyrar                   \\ \hline
-		         1296.994 & 1297.481 &      20 kHz & FM              & Repeater ut Repeater ut 1297.000--1297.475    \\
-		                  &          &             &                 & RM0 – RM19, 25 kHz, 6 MHz skift               \\ \hline
-		         1297.494 & 1297.981 &      20 kHz & FM simplex      & Simplex 25 kHz kanaler SM20--39               \\
-		                  &          &             &                 & \textbf{FM anrop 1297.500 SM20}               \\ \hline
-		         1299.000 & 1299.750 &     150 kHz & Alla moder      & 5 st 150 kHz kanaler för DD,                  \\
-		                  &          &             &                 & 1299.075, 225, 375, 525, och 675 $\pm$75 kHz  \\ \hline
-		         1299.750 & 1300.000 &      20 kHz & Alla moder      & 8 st FM/DV 25 kHz kan. 1299.775--1299.975
-	\end{tabular}
+%\clearpage
+\section{Bandplan 23cm 1240--1300 MHz}
+\begin{tabular}{rrrll}
+	\textbf{Frekvens} &          & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                           \\ \hline
+	         1240.000 & 1243.250 &      20 kHz & Alla moder      & 1240.000 - 1241.000 Digital kommunikation     \\ \hline
+	         1243.250 & 1260.000 &      20 kHz & ATV och Data    & Repeater ut 1258.150-1259.350, R20--68        \\ \hline
+	         1260.000 & 1270.000 &      12 kHz & Satellit        & Endast för satelliter alla moder              \\ \hline
+	         1270.000 & 1272.000 &      20 kHz & Alla moder      & Repeater in, 1270.025-1270.700, RS1--28       \\
+	                  &          &             &                 & Packet RS29--50                               \\ \hline
+	         1272.000 & 1290.994 &      20 kHz & ATV och Data    & Amatörtelevision ATV                          \\ \hline
+	         1290.994 & 1291.481 &      20 kHz & FM och DV       & Repeater in Repeat. in 1291.000--1291.475     \\
+	                  &          &             &                 & RM0 – RM19, 25 kHz, 6 MHz skift               \\ \hline
+	         1291.494 & 1296.000 &      12 kHz & Alla moder      &  \\ \hline
+	         1296.000 & 1296.150 &      500 Hz & CW,  MGM        & EME 1296.000--025, \textbf{CW anrop 1296.050} \\
+	                  &          &             &                 & PSK31 1296.138 MHz                            \\ \hline
+	         1296.150 & 1296.400 &     2.7 kHz & CW, SSB, MGM    & \textbf{SSB anrop 1296.200}                   \\
+	                  &          &             &                 & \textbf{FSK441 MS anrop 1296.370}             \\ \hline
+	         1296.400 & 1296.600 &     2.7 kHz & CW, SSB, MGM    & Linjära transpondrar infrekvens               \\ \hline
+	         1296.600 & 1296.800 &     2.7 kHz & CW, SSB, MGM    & SSTV/FAX 1296.500, MGM/RTTY 1296.600          \\ \hline
+	         1296.600 & 1296.800 &     2.7 kHz & CW, SSB, MGM    & Linjära transpondrar utfrekvens               \\
+	                  &          &             &                 & 1296.750-.800 lokala fyrar max 10 W           \\ \hline
+	         1296.800 & 1296.994 &      500 Hz & Fyrar           & Exklusivt segment för fyrar                   \\ \hline
+	         1296.994 & 1297.481 &      20 kHz & FM              & Repeater ut Repeater ut 1297.000--1297.475    \\
+	                  &          &             &                 & RM0 – RM19, 25 kHz, 6 MHz skift               \\ \hline
+	         1297.494 & 1297.981 &      20 kHz & FM simplex      & Simplex 25 kHz kanaler SM20--39               \\
+	                  &          &             &                 & \textbf{FM anrop 1297.500 SM20}               \\ \hline
+	         1299.000 & 1299.750 &     150 kHz & Alla moder      & 5 st 150 kHz kanaler för DD,                  \\
+	                  &          &             &                 & 1299.075, 225, 375, 525, och 675 $\pm$75 kHz  \\ \hline
+	         1299.750 & 1300.000 &      20 kHz & Alla moder      & 8 st FM/DV 25 kHz kan. 1299.775--1299.975
+\end{tabular}
 \end{landscape}
 
 \begin{landscape}
